2013-07-08  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57785
	* simplify.c (compute_dot_product): Complex conjugate for
	dot_product.
	(gfc_simplify_dot_product, gfc_simplify_matmul): Update call.

2013-07-08  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57469
	* trans-decl.c (generate_local_decl): Don't warn that
	a dummy is unused, when it is in a namelist.

2013-07-01  Dominique d'Humieres  <dominiq@lps.ens.fr>

	PR fortran/54788
	* array.c (spec_size): handle the case as==NULL.

2013-06-26  Tobias Burnus  <burnus@net-b.de>

	PR fortran/29800
	* trans-array.c (gfc_conv_array_ref): Improve out-of-bounds
	diagnostic message.
	* trans-array.c (gfc_conv_array_ref): Update prototype.
	* trans-expr.c (gfc_conv_variable): Update call.

2013-06-24  Steven G. Kargl  <sgk@troutmask.apl.washington.edu>
	    Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
	    Dominique d'Humieres  <dominiq@lps.ens.fr>

	PR fortran/52413
	* simplify.c (gfc_simplify_fraction): Fix the sign of negative values.

2013-06-21  Tobias Burnus  <burnus@net-b.de>

	PR fortran/37336
	* trans-array.c (gfc_trans_deferred_array): Call the
	finalizer for nonallocatable local variables.
	* trans-decl.c (gfc_get_symbol_decl): Add local
	finalizable vars to the deferred list.
	(gfc_trans_deferred_vars): Call gfc_trans_deferred_array
	for those.

2013-06-21  Tobias Burnus  <burnus@net-b.de>

	* trans-array.c (gfc_alloc_allocatable_for_assignment): Allocate
	at least one byte.
	* trans-expr.c (alloc_scalar_allocatable_for_assignment): Ditto.

2013-06-20  Tobias Burnus  <burnus@net-b.de>

	* resolve.c (get_temp_from_expr): Don't set FL_VARIABLE twice.

2013-06-17  Tobias Burnus  <burnus@net-b.de>

	* gfortran.h (gfc_option_t): Add fpe_summary.
	* gfortran.texi (_gfortran_set_options): Update.
	* invoke.texi (-ffpe-summary): Add doc.
	* lang.opt (ffpe-summary): Add flag.
	* options.c (gfc_init_options, gfc_handle_option): Handle it.
	(gfc_handle_fpe_option): Renamed from gfc_handle_fpe_trap_option,