@@ -1,5 +1,10 @@
 2013-07-08  Tobias Burnus  <burnus@net-b.de>
 
+	PR fortran/50554
+	* gfortran.dg/do_check_9.f90: New.
+
+2013-07-08  Tobias Burnus  <burnus@net-b.de>
+
 	PR fortran/57785
 	* gfortran.dg/dot_product_2.f90: New.
 
